Relocate HikariCP and slf4j too to prevent conflicts